# espresso

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  chisel-z3-test.sc  format.sh
.github/workflows/: ci.yml  release.yml  test.yml
doc/: espresso.adoc
errtrap/: Makefile  errtrap.c  errtrap.h
espresso/: Makefile  black_white.c  canonical.c  cofactor.c  cols.c  compl.c  contain.c  cubestr.c  cvrin.c  cvrm.c  cvrmisc.c  cvrout.c  dominate.c  equiv.c  espresso.c  espresso.h  essen.c  essentiality.c  exact.c  expand.c  gasp.c  getopt.c  gimpel.c  globals.c  hack.c  helper.c  indep.c  irred.c  main.c  main.h  map.c  matrix.c  mincov.c  mincov.h  mincov_int.h  opo.c  pair.c  part.c  port.h  primes.c  (+17 more)
examples/examples/: al2  alcom  alu2  alu3  amd  apla  bca  bcb  bcc  bcd  check  check1  check2  dekoder  dk17  dk27  dk48  exep  in0  in2  in3  in4  in5  in6  in7  lin.rom  mark1  max46  mytest  mytest2  mytest3  newapla  newapla1  newapla2  newbyte  newcond  newcpla1  newcpla2  newcwp  newill  (+15 more)
examples/hard_examples/: ex4  jbp  mainpla  misg  mish  soar.pla  test2  test3  ti  x2dn  x7dn  xparc
examples/tlex/: 5xp1.pla  9sym.pla  Z5xp1.pla  Z9sym.pla  alu4.pla  apex1.pla  apex2.pla  apex3.pla  apex4.pla  apex5.pla  bw.pla  clip.pla  con1.pla  cordic.pla  cps.pla  duke2.pla  e64.pla  inc.pla  misex1.pla  misex2.pla  misex3.pla  misex3c.pla  o64.pla  rd53.pla  rd73.pla  rd84.pla  sao2.pla  seq.pla  spla.pla  squar5.pla  t481.pla  table3.pla  table5.pla  vg2.pla  xor5.pla
man/: .gitignore  Makefile  espresso.1  espresso.5  espresso.adoc  pla.adoc
mm/: Makefile
port/: Makefile  port.h  strstr.c
src/: BitPat.cpp  BitPat.hpp  Cost.cpp  Cost.hpp  Cover.cpp  Cover.hpp  Cube.cpp  Cube.hpp  Pla.cpp  Pla.hpp  SMMincov.cpp  main.cpp
src/SparseMatrix/: cols.c  matrix.c  mincov.h  mincov_int.h  rows.c  solution.c  sparse.h  sparse_int.h
st/: Makefile
uprintf/: Makefile
utility/: Makefile  ansi.h  copyright.h  cpu_time.c  csystem.c  port.h  prtime.c  stdlib.h  strsav.c  utility.h
